<resources>
    <string name="author">Author</string>
    <string name="in_cooperation_with">In cooperation with</string>
    <string name="in_artistic_cooperation_with">In artistic cooperation with</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="open_location">Show detail</string>
    <string name="navigate">Navigate</string>
    <string name="show_on_web">Show on web</string>
    <string name="start_guide">Start guide</string>
    <string name="credits">Credits</string>
    <string name="app_name">Archeologie</string>
    <string name="search">Search…</string>
    <string name="exitPrompt">Press again to exit</string>
</resources>