<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Credits"
        />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical"
            tools:context=".fragments.CreditsFragment">
            
            <TextView
                android:id="@+id/authorTitle"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:id="@+id/author"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#444444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/inCoopTitle"
                android:layout_marginTop="16dp"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_cooperation_with" />

            <TextView
                android:id="@+id/inCoop"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#444444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/inArtisticCoopTitle"
                android:layout_marginTop="16dp"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_artistic_cooperation_with" />

            <TextView
                android:id="@+id/inArtisticCoop"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#444444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="test" />

            <TextView
                android:id="@+id/acknowledgementsTitle"
                android:layout_marginTop="16dp"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acknowledgements" />

            <TextView
                android:id="@+id/acknowledgements"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="#444444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="test" />

            <ImageView
                android:layout_marginTop="16dp"
                android:id="@+id/logo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="16dp"
                android:id="@+id/logo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="16dp"
                android:id="@+id/logo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:id="@+id/logo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>